--- a/html/Verificador.html
+++ b/html/Verificador.html
@@ -86,10 +86,10 @@
 
     <footer>
         <div id="footer_content">
-
+    
             <ul class="footer-list">
                 <li>
-                    <p>Contato</p>
+                    <h5>Contato</h5>
                 </li>
                 <li>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
@@ -99,30 +99,30 @@
                     <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">Tel: (21) 96514-9947</a>
                 </li>
             </ul>
-
+    
             <ul class="footer-list">
                 <li>
-                    <p>Conheça-nos</p>
+                    <h5>Conheça-nos</h5>
                 </li>
                 <li>
                     <a href="sobre.html" class="footer-link">Sobre Nós</a>
                 </li>
             </ul>
-            <ul class="footer-list">
+            <ul class="footer-list ul_desenvolvido">
                 <li>
-                    <p>Desenvolvido por:</p>
+                    <h5>Desenvolvido por:</h5>
                 </li>
                 <li>
-                    <p class="footer-D">Maria Clara Bastos</p>
+                    <span class="footer-D">Maria Clara Bastos</span>
                 </li>
                 <li>
-                    <p class="footer-D">Gustavo Marques</p>
+                    <span class="footer-D">Gustavo Marques</span>
                 </li>
                 <li>
-                    <p class="footer-D">Julio Cezar</p>
+                    <span class="footer-D">Julio Cezar</span>
                 </li>
                 <li>
-                    <p class="footer-D">Eliza Vitoria</p>
+                    <span class="footer-D">Eliza Vitoria</span>
                 </li>
             </ul>
         </div>
