--- a/html/sobre.html
+++ b/html/sobre.html
@@ -69,37 +69,40 @@
     
         <ul class="footer-list">
           <li>
-            <h3>Contato</h3>
+            <h5>Contato</h5>
           </li>
           <li>
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
-              class="footer-link">CyberOwl@gmail.com</a>
+              class="footer-link">Email: cyberOwl@gmail.com</a>
           </li>
           <li>
-            <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">(21) 96514-9947</a>
+            <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">Tel: (21) 96514-9947</a>
           </li>
         </ul>
     
         <ul class="footer-list">
           <li>
-            <h3>Conheça-nos</h3>
+            <h5>Conheça-nos</h5>
           </li>
           <li>
-            <a href="html/sobre.html" class="footer-link">Sobre Nós</a>
+            <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list">
+        <ul class="footer-list ul_desenvolvido">
           <li>
-            <h3>Desenvolvido por:</h3>
+            <h5>Desenvolvido por:</h5>
           </li>
           <li>
-            <p class="footer-D">Maria</p>
+            <span class="footer-D">Maria Clara Bastos</span>
           </li>
           <li>
-            <p class="footer-D">Gustavo</p>
+            <span class="footer-D">Gustavo Marques</span>
           </li>
           <li>
-            <p class="footer-D">Julio</p>
+            <span class="footer-D">Julio Cezar</span>
+          </li>
+          <li>
+            <span class="footer-D">Eliza Vitoria</span>
           </li>
         </ul>
       </div>
