--- a/html/redefineSenha.html
+++ b/html/redefineSenha.html
@@ -53,12 +53,7 @@
             <div class="input-box">
               <header>Redefinir Senha</header>
               <form id="formRedefinirSenha">
-                <input
-                    type="email"
-                    id="email"
-                    class="input"
-                    placeholder="Seu Email"
-                    required/>
+                <input type="email" id="email" class="input" placeholder="Seu Email" required/>
                 <input type="password" class="input" id="SenhaNova" required pattern="(?=.*[A-Z])(?=.*[\W_]).{8,}" placeholder="Nova Senha"/>
                 <input type="password" class="input" id="confirmSenha" required pattern="(?=.*[A-Z])(?=.*[\W_]).{8,}" placeholder="Confirmar Senha"/>
                 <div class="input-field">
