--- a/html/login.html
+++ b/html/login.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="esqueceuSenha">
-                  <span> <a href="#">Esqueceu a senha?</a></span>
+                  <span> <a href="/html/redefineSenha.html">Esqueceu a senha?</a></span>
                 </div>
 
                 <div class="input-field">
