--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/acessibilidade.css" />
     <link rel="stylesheet" href="css/rodape.css" />
+    <script src='https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js'></script>
     <script src="js/menu.js" defer></script>
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
+    <script src="js/APIs.js"></script>
   </head>
   <body>
     <header class="header">
@@ -332,7 +334,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list ul_desenvolvido">
+        <ul class="footer-list">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
@@ -344,9 +346,6 @@
           </li>
           <li>
             <span class="footer-D">Julio Cezar</span>
-          </li>
-          <li>
-            <span class="footer-D">Eliza Vitoria</span>
           </li>
         </ul>
       </div>
