--- a/html/login.html
+++ b/html/login.html
@@ -129,7 +129,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list ul_desenvolvido">
+        <ul class="footer-list">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
@@ -141,9 +141,6 @@
           </li>
           <li>
             <span class="footer-D">Julio Cezar</span>
-          </li>
-          <li>
-            <span class="footer-D">Eliza Vitoria</span>
           </li>
         </ul>
       </div>
