--- a/html/sobre.html
+++ b/html/sobre.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/acessibilidade.css">
     <script src="/js/acessibilidade.js" defer></script>
     <script src="../js/menu.js" defer></script>
+    <script src="/js/conf.js"></script>
     <title>Sobre Nós</title>
   </head>
   <body>
@@ -29,9 +30,9 @@
         <div class="nav-list esconder" id="menu">
           <p class="nav-item p1"><a href="../index.html#Inicio" class="nav-link">Inicio</a></p>
           <p class="nav-item p2"><a href="../index.html#Boletim" class="nav-link">Boletim</a></p>
-          <p class="nav-item p1"><a href="../index.html#Verificar-Url" class="nav-link">Verificador de URL</a></p>
+          <p class="nav-item p1"><a href="Verificador.html" class="nav-link">Verificador de URL</a></p>
           <p class="nav-item p2"><a href="../index.html#Contatos" class="nav-link">Contatos</a></p>
-          <p class="nav-item p1"><a href="cadastro.html" class="nav-link">Cadastro</a></p>
+          <p class="nav-item p1"><a href="cadastro.html" class="nav-link" id="Login_Conf">Cadastro</a></p>
           <p class="nav-item p2"><a href="sobre.html" class="nav-link">Sobre Nós</a></p>
         </div>
     
@@ -72,7 +73,7 @@
             <h5>Contato</h5>
           </li>
           <li>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contato.cyberowl@gmail.com" target="_blank"
               class="footer-link">Email: cyberOwl@gmail.com</a>
           </li>
           <li>
@@ -88,7 +89,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list">
+        <ul class="footer-list ul_desenvolvido">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
