--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
     <script src="js/APIs.js"></script>
+    <script src="js/conf.js"></script>
   </head>
   <body>
     <header class="header">
@@ -48,7 +49,7 @@
             <a href="#Contatos" class="nav-link">Contatos</a>
           </p>
           <p class="nav-item p1">
-            <a href="html/cadastro.html" class="nav-link">Cadastro/Login</a>
+            <a href="html/cadastro.html" class="nav-link" id="Login_Conf" >Cadastro/Login</a>
           </p>
           <p class="nav-item p2">
             <a href="html/sobre.html" class="nav-link">Sobre Nós</a>
@@ -318,7 +319,7 @@
             <h5>Contato</h5>
           </li>
           <li>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contato.cyberowl@gmail.com" target="_blank"
               class="footer-link">Email: cyberOwl@gmail.com</a>
           </li>
           <li>
@@ -334,7 +335,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list">
+        <ul class="footer-list ul_desenvolvido">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
