--- a/html/redefineSenha.html
+++ b/html/redefineSenha.html
@@ -16,6 +16,7 @@
 
     <script src="../js/menu.js" defer></script>
     <script src="../js/redefineSenha.js" defer></script>
+    <script src="/js/conf.js"></script>
   </head>
 
   <body>
@@ -34,9 +35,9 @@
         <div class="nav-list esconder" id="menu">
           <p class="nav-item p1"><a href="../index.html#Inicio" class="nav-link">Inicio</a></p>
           <p class="nav-item p2"><a href="../index.html#Boletim" class="nav-link">Boletim</a></p>
-          <p class="nav-item p1"><a href="../index.html#Verificar-Url" class="nav-link">Verificador de URL</a></p>
+          <p class="nav-item p1"><a href="Verificador.html" class="nav-link">Verificador de URL</a></p>
           <p class="nav-item p2"><a href="../index.html#Contatos" class="nav-link">Contatos</a></p>
-          <p class="nav-item p1"><a href="cadastro.html" class="nav-link">Cadastro</a></p>
+          <p class="nav-item p1"><a href="cadastro.html" class="nav-link" id="Login_Conf">Cadastro</a></p>
           <p class="nav-item p2"><a href="sobre.html" class="nav-link">Sobre Nós</a></p>
         </div>
     
@@ -81,7 +82,7 @@
             <h5>Contato</h5>
           </li>
           <li>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contato.cyberowl@gmail.com" target="_blank"
               class="footer-link">Email: cyberOwl@gmail.com</a>
           </li>
           <li>
@@ -97,7 +98,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list">
+        <ul class="footer-list ul_desenvolvido">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
