--- a/html/Verificador.html
+++ b/html/Verificador.html
@@ -102,8 +102,8 @@
                     <h5>Contato</h5>
                 </li>
                 <li>
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
-                        class="footer-link">Email: cyberOwl@gmail.com</a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contato.cyberowl@gmail.com" target="_blank"
+                        class="footer-link">Email: contato.cyberowl@gmail.com</a>
                 </li>
                 <li>
                     <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">Tel: (21) 96514-9947</a>
