--- a/html/sobre.html
+++ b/html/sobre.html
@@ -73,7 +73,7 @@
           </li>
           <li>
             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contato.cyberowl@gmail.com" target="_blank"
-              class="footer-link">Email: cyberOwl@gmail.com</a>
+              class="footer-link">Email: contato.cyberowl@gmail.com</a>
           </li>
           <li>
             <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">Tel: (21) 96514-9947</a>
@@ -88,7 +88,7 @@
             <a href="sobre.html" class="footer-link">Sobre Nós</a>
           </li>
         </ul>
-        <ul class="footer-list ul_desenvolvido">
+        <ul class="footer-list">
           <li>
             <h5>Desenvolvido por:</h5>
           </li>
