--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/menu.js" defer></script>
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
+    <script src="js/conf.js"></script>
   </head>
   <body>
     <header class="header">
@@ -47,7 +48,7 @@
             <a href="#Contatos" class="nav-link">Contatos</a>
           </p>
           <p class="nav-item p1">
-            <a href="html/cadastro.html" class="nav-link">Cadastro/Login</a>
+            <a href="html/cadastro.html" class="nav-link" id="Login_Conf">Cadastro/Login</a>
           </p>
           <p class="nav-item p2">
             <a href="html/sobre.html" class="nav-link">Sobre Nós</a>
@@ -338,8 +339,8 @@
     </a>
     </section>
     
-    <footer>
-      <div id="footer_content">
+    <footer id="Contatos">
+      <div id="footer_content" >
     
         <ul class="footer-list">
           <li>
