--- a/html/Configuracao.html
+++ b/html/Configuracao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Verificar Url</title>
+    <title>Configuração</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/rodape.css" />
     <link rel="stylesheet" href="/css/conf.css">
     <link rel="stylesheet" href="/css/mensagem.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="/js/menu.js" defer></script>
     <script src='/js/APIs.js'></script>
     <script src="/js/acessibilidade.js" defer></script>
@@ -65,7 +66,10 @@
         </nav>
     </header>
     <div class="definicaoPhishing">
-        <h3>Configuração</h3>
+        <h1>
+            Configuração
+            <span><i class="fa-solid fa-gear" style="font-size: 2em; color: #ffffff;"></i></span>
+        </h1>
         <p>
             <strong>Nome:</strong>
             <span id="nomeConf"></span>
@@ -78,14 +82,11 @@
             <strong>Senha:</strong>
             <span>********</span>
         </p>
-
         <div class="div_btns">
             <button class="btns"><a href="/html/redefineSenha.html">Redefinir senha</a></button>
             <button class="btns" id="btnExcluir" onclick="Excluir()">Excluir</button>
             <button class="btns" id="btnSair" onclick="Sair()">Sair</button>
-        </div>
-        
-        
+        </div> 
     </div>
     <footer>
         <div id="footer_content">
