--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/menu.js" defer></script>
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
+    <script src="js/conf.js"></script>
   </head>
   <body>
     <header class="header">
@@ -47,7 +48,7 @@
             <a href="#Contatos" class="nav-link">Contatos</a>
           </p>
           <p class="nav-item p1">
-            <a href="html/cadastro.html" class="nav-link">Cadastro/Login</a>
+            <a href="html/cadastro.html" class="nav-link" id="Login_Conf">Cadastro/Login</a>
           </p>
           <p class="nav-item p2">
             <a href="html/sobre.html" class="nav-link">Sobre Nós</a>
@@ -317,7 +318,7 @@
               mitigação, isso não substitui a necessidade de buscar as
               autoridades. Registrar um boletim de ocorrência é fundamental em
               tais situações. Para fazer isso, acesse
-              <a href="#" target="_blank">este link</a>.
+              <a href="https://delegaciaonline.pcivil.rj.gov.br/comunicacao-de-ocorrencia/orientacoes-gerais" target="_blank">este link</a>.
             </p>
           </div>
         </li>
