centralizar div conf

--- a/html/Configuracao.html
+++ b/html/Configuracao.html
@@ -65,29 +65,32 @@
             </div>
         </nav>
     </header>
-    <div class="definicaoPhishing">
-        <h1>
-            Configuração
-            <span><i class="fa-solid fa-gear" style="font-size: 2em; color: #ffffff;"></i></span>
-        </h1>
-        <p>
-            <strong>Nome:</strong>
-            <span id="nomeConf"></span>
-        </p>
-        <p>
-            <strong>Email:</strong>
-            <span id="emailConf"></span>
-        </p>
-        <p>
-            <strong>Senha:</strong>
-            <span>********</span>
-        </p>
-        <div class="div_btns">
-            <button class="btns"><a href="/html/redefineSenha.html">Redefinir senha</a></button>
-            <button class="btns" id="btnExcluir" onclick="Excluir()">Excluir</button>
-            <button class="btns" id="btnSair" onclick="Sair()">Sair</button>
-        </div> 
+    <div class="centralizar_div">
+        <div class="definicaoPhishing">
+            <h1>
+                Configuração
+                <span><i class="fa-solid fa-gear" style="font-size: 2em; color: #ffffff;"></i></span>
+            </h1>
+            <p>
+                <strong>Nome:</strong>
+                <span id="nomeConf"></span>
+            </p>
+            <p>
+                <strong>Email:</strong>
+                <span id="emailConf"></span>
+            </p>
+            <p>
+                <strong>Senha:</strong>
+                <span>********</span>
+            </p>
+            <div class="div_btns">
+                <button class="btns"><a href="/html/redefineSenha.html">Redefinir senha</a></button>
+                <button class="btns" id="btnExcluir" onclick="Excluir()">Excluir</button>
+                <button class="btns" id="btnSair" onclick="Sair()">Sair</button>
+            </div>
+        </div>
     </div>
+    
     <footer>
         <div id="footer_content">
     
