--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="ameaca">
         <img src="/img/cadeado.png" id="imgCard" />
         <div class="amTxt">
-          <h2>Por que o phishing é uma grande ameaça cibernética?</h2>
+          <h1>Por que o phishing é uma grande ameaça cibernética?</h1>
           <p>
             O phishing é uma ameaça significativa porque explora pessoas em vez
             de vulnerabilidades tecnológicas, permitindo que invasores enganem
@@ -126,7 +126,7 @@
 
       <div class="columns">
         <div class="tiposPhishing">
-          <h2>Tipos de ataques de Phishing</h2>
+          <h2 class="NH2">Tipos de ataques de Phishing</h2>
           <p>
             A palavra "phishing" joga com o fato de que os golpistas usam
             "iscas" atraentes para enganar suas vítimas, da mesma forma que os
@@ -237,10 +237,10 @@
         </div>
       </div>
     </section>
+    <h2>
+      Phishing, Vishing e Smishing: Aprenda a Proteger-se de Golpes Digitais!
+    </h2>
     <div class="video-container">
-      <h2>
-        Phishing, Vishing e Smishing: Aprenda a Proteger-se de Golpes Digitais!
-      </h2>
       <iframe
         src="https://www.youtube.com/embed/5nkWQZvomVA?autoplay=1&mute=1"
         title="YouTube video player"
@@ -253,7 +253,7 @@
     </div>
 
     <section id="Vitimas" class="container mt-5">
-      <h2 id="Boletim">O que fazer em caso de ser uma vítima</h2>
+      <h2 id="Boletim" class="NH2">O que fazer em caso de ser uma vítima</h2>
       <p>
         Se você foi vítima de phishing ou está desconfiado de um possível
         ataque, é importante agir rapidamente para minimizar os danos.
