--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <link rel="stylesheet" href="css/acessibilidade.css" />
     <link rel="stylesheet" href="css/rodape.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src='https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js'></script>
     <script src="js/menu.js" defer></script>
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
     <script src="js/conf.js"></script>
+    <script src="js/APIs.js"></script>
   </head>
   <body>
     <header class="header">
