--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               mitigação, isso não substitui a necessidade de buscar as
               autoridades. Registrar um boletim de ocorrência é fundamental em
               tais situações. Para fazer isso, acesse
-              <a href="https://delegaciaonline.pcivil.rj.gov.br/comunicacao-de-ocorrencia/orientacoes-gerais" target="_blank">este link</a>.
+              <a href="https://delegaciaonline.pcivil.rj.gov.br" target="_blank">este link</a>.
             </p>
           </div>
         </li>
