--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="../css/menu.css" />
     <link rel="stylesheet" href="../css/rodape.css">
+    <link rel="stylesheet" href="../css/mensagem.css">
     <script src="../js/menu.js" defer></script>
     <title>Cadastro</title>
   </head>
@@ -138,7 +139,14 @@
         2024 todos os direitos reservados
       </div>
     </footer>
-    
+
+    <div id="custom-confirm" class="hidden">
+      <div class="confirm-box">
+        <p id="confirm-message">Você tem certeza?</p>
+        <button id="confirm-yes">OK</button>
+      </div>
+    </div>
+
     <script src="../js/cadastro.js"></script>
   </body>
 </html>
