--- a/html/login.html
+++ b/html/login.html
@@ -15,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/rodape.css">
+    <link rel="stylesheet" href="../css/mensagem.css">
     <!-- JS -->
     <script src="../js/menu.js" defer></script>
     <script src="../js/login.js" defer></script>
@@ -149,5 +150,11 @@
         2024 todos os direitos reservados
       </div>
     </footer>
+    <div id="custom-confirm" class="hidden">
+      <div class="confirm-box">
+        <p id="confirm-message">Você tem certeza?</p>
+        <button id="confirm-yes">OK</button>
+      </div>
+    </div>
   </body>
 </html>
