--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/menu.css" />
     <link rel="stylesheet" href="../css/rodape.css">
     <script src="../js/menu.js" defer></script>
@@ -74,8 +75,10 @@
                 </div>
                 <div class="input-field">
                   <label for="senha">Senha</label>
-                  <input type="password" class="input" id="senha" required />
-                  
+                  <div class="password-container">
+                    <input type="password" class="input" id="senha" required />
+                    <i class="fas fa-eye toggle-icon" id="togglePassword"></i>
+                  </div>
                   <div id="senha-incorreta" style="color: red"></div>
                 </div>
                 <div class="input-field">
