--- a/html/login.html
+++ b/html/login.html
@@ -14,6 +14,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/rodape.css">
     <!-- JS -->
     <script src="../js/menu.js" defer></script>
@@ -73,17 +74,18 @@
 
                 <div class="input-field">
                   <label for="pass">Senha</label>
-                  <input
-                    type="password"
-                    class="input"
-                    id="pass"
-                    required
-                    pattern="(?=.*[A-Z])(?=.*[\W_]).{8,}"
-                  />
-                  
+                  <div class="password-container">
+                    <input
+                      type="password"
+                      class="input"
+                      id="pass"
+                      required
+                      pattern="(?=.*[A-Z])(?=.*[\W_]).{8,}"
+                    />
+                    <i class="fas fa-eye toggle-icon" id="togglePassword"></i>
+                  </div>
                   <div id="senha-incorreta" class="text-danger"></div>
-                </div>
-
+                </div>                
                 <div class="esqueceuSenha">
                   <span> <a href="/html/redefineSenha.html">Esqueceu a senha?</a></span>
                 </div>
