--- a/html/Configuracao.html
+++ b/html/Configuracao.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/css/mensagem.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script src="/js/menu.js" defer></script>
-    <script src='/js/APIs.js'></script>
+    <!-- <script src='/js/APIs.js'></script> -->
     <script src="/js/acessibilidade.js" defer></script>
     <script src="/js/conf.js"></script>
 </head>
